# simple-aicommits

./: Cargo.toml  README.md
src/: ai_provider.rs  main.rs  prompts.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
