[package]
name = "simple-aicommits"
version = "0.1.3"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A simple CLI tool that generates commit messages from git diffs using Claude AI, OpenAI, or Gemini"
keywords = ["git", "commit", "ai"]
license = "MIT"

[[bin]]
name = "aicommits"
path = "src/main.rs"

[dependencies]
anthropic-ai-sdk = "0.1.4"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
async-trait = "0.1.77"
reqwest = { version = "0.11.26", features = ["json"] }
openai = { version = "1.0.0", features = ["chat"] }
google-generative-ai-rs = "0.2.0"
