[package]
name = "simple-aicommits"
version = "0.2.1"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A simple CLI tool that generates commit messages from git diffs using Claude AI, OpenAI, or Gemini"
keywords = ["git", "commit", "ai"]
license = "MIT"
repository = "https://github.com/katsuhirohonda/simple-aicommits"
rust-version = "1.85.0"

[[bin]]
name = "aicommits"
path = "src/main.rs"

[dependencies]
anthropic-ai-sdk = "0.1.4"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
async-trait = "0.1.77"
reqwest = { version = "0.11.26", features = ["json"] }
openai_api_rust = "0.1.9"
genai = "0.1.23"
